# django-freeman

./: .gitignore  LICENSE  Pipfile  README.rst  pyproject.toml
docs/: auth.md  middlewares.md
freeman/: __init__.py  settings.py
freeman/auth/: README.md  __init__.py  apps.py  models.py
freeman/authapp/: admin.py  apps.py  authentication.py  models.py  signals.py
freeman/middlewares/: errorhandling.py  picking.py
freeman/models/: abstract.py  types.py
freeman/utils/: dsa.py  dto.py  exceptions.py  funcache.py  models.py  query.py  strings.py
tests/: test_dsa.py  test_dto.py  test_picking.py  test_query.py  test_strings.py  test_typecheck.py
