[tool.poetry]
name = "django-freeman"
version = "0.1.1"
description = "Collections of functions and helpers that helps speed up development of your django project"
authors = ["rubbiekelvin <rubbiekelvinvoltsman@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "freeman"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
